# timecamp-v2.1-desktop-app

./: .appveyor.yml  .editorconfig  .gitignore  .shippable.yml  .travis.yml  CMakeLists.txt  CMakeProjectConfig.cmake.example  README.md  TimecampDesktop.qrc  deploy_deb.sh  deploy_lin.sh  deploy_mac.sh  deploy_win.bat  install_deb.sh  qpm.json  shippable.yml  sonar-project.properties
cmake/: MacOSXBundleInfo.plist.in  QtCommon.cmake  windows_metafile.rc.in
res/: AppIcon.icns  TimeCampDesktop.qrc  TimecampDesktop.desktop  TimecampDesktop.qrc
src/: AppData.cpp  AppData.h  AutoTracking.cpp  AutoTracking.h  Autorun.cpp  Autorun.h  ChromeUtils.cpp  ChromeUtils.h  Comms.cpp  Comms.h  DbManager.cpp  DbManager.h  FirefoxUtils.cpp  FirefoxUtils.h  MainWidget.cpp  MainWidget.h  MainWidget.ui  Settings.h  TCNavigationInterceptor.cpp  TCNavigationInterceptor.h  TCRequestInterceptor.cpp  TCRequestInterceptor.h  TCTimer.cpp  TCTimer.h  TCWebEngineView.cpp  TCWebEngineView.h  Task.cpp  Task.h  TrayManager.cpp  TrayManager.h  Utils_M.h  Utils_M.mm  Widget.h  Widget_M.h  Widget_M.mm  Widget_M_Cocoa.h  Widget_M_Cocoa.mm  WindowEvents.cpp  WindowEvents.h  WindowEventsManager.cpp  (+9 more)
src/ControlIterator/: AccControlIterator.cpp  AccControlIterator.h  IControlIterator.cpp  IControlIterator.h  UIAControlIterator.cpp  UIAControlIterator.h
src/DataCollector/: WindowEvents.cpp  WindowEvents.h  WindowEvents_M.h  WindowEvents_M.mm  WindowEvents_U.cpp  WindowEvents_U.h  WindowEvents_W.cpp  WindowEvents_W.h
src/Overrides/: ClickableLabel.cpp  ClickableLabel.h  TCNavigationInterceptor.cpp  TCRequestInterceptor.cpp  TCRequestInterceptor.h  TCWebEngineView.cpp  TCWebEngineView.h
src/Widget/: FloatingWidget.cpp  FloatingWidget.h  Widget.h  Widget_M.h  Widget_M.mm  Widget_M_Cocoa.h  Widget_M_Cocoa.mm
src/resources/: icons.rc
